--------------------------------------------------------------------------------
Changes for 1.9.8

New features:

Bug fixes:
 - [ZBX-4245] fixed error when add operation condition in action (Vedmak)
 - [ZBX-4265] fixed iconmappig API permission check (pavels)
 - [ZBX-4283] fixed template creation being reported as an update (Richlv)
 - [ZBX-3749] escaped HTML entities in the web step "required" field (pavels)

--------------------------------------------------------------------------------
Changes for 1.9.7

New features:
 - [ZBX-1346] add example user parameter to monitor mail queue length from mailq (Richlv)
 - [ZBXNEXT-429] make range select work in a more intuitive fashion (Eduard)
 - [ZBXNEXT-910] redesign Administration->Maintenance (Eduard)
 - [ZBX-4222] added more clear labels 'Escalation period' and 'Default escalation period' in configuration of actions (Alexei)
 - [ZBXNEXT-485] improved simple checks key syntax as in other item keys (Sasha)
 - [ZBXNEXT-916] redesign Administration->Users, Users groups, User Profile (Eduard)
 - [ZBXNEXT-951] added possibility to calculate CPU load per processor: system.cpu.load[percpu,avgX] (rudolfs)
 - [ZBXNEXT-965] added redirect to a special warning page when user browser is not supported by Zabbix (Eduard)
 - [ZBX-4167] updated requirements screen for frontend (Vedmak)
 - [ZBXNEXT-918] redesign Administration->Media types (Eduard)
 - [ZBXNEXT-915] redesign Administration->Authentication (Eduard)
 - [ZBXNEXT-966] update jQuery to 1.6.4 (Eduard)
 - [ZBX-1357] updated Brazilian Portuguese, Dutch, German, Japanese, Polish, Russian, Slovak and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
 - [ZBX-3892] added support for low-level discovery template to action condition check (dimir)
 - [ZBX-4169] fixed filter reset after timeline change in Monitoring->latest data->History of log item (Vedmak)
 - [ZBX-3753] fixed possibility to remove host interface that is in use (Vedmak)