@@ -4,6 +4,7 @@ Changes for 1.9.8
 New features:
 
 Bug fixes:
+ - [ZBX-3857] fixed creation and sorting of trigger prototypes (Vedmak)
  - [ZBX-4245] fixed error when add operation condition in action (Vedmak)
  - [ZBX-4265] fixed iconmappig API permission check (pavels)
  - [ZBX-4283] fixed template creation being reported as an update (Richlv)
